# plugin_test

./: LICENSE  README.md  setup.cfg  tox.ini
src/module/: napari.yaml
src/module/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
